# hermes-dynamic-workflows

./: .gitignore  README.ja-JP.md  README.md  README.zh-CN.md  TECHNICAL.md  __init__.py  plugin.yaml  pyproject.toml
hermes_dynamic_workflows/: __init__.py  entry.py  plugin_entrypoint.py
hermes_dynamic_workflows/adapters/: __init__.py  commands.py  task_stop.py  workflow.py
hermes_dynamic_workflows/agent/: runner.py
hermes_dynamic_workflows/agents/: __init__.py  presets.py  runner.py  worktree.py
hermes_dynamic_workflows/child/: runner.py  structured_output.py
hermes_dynamic_workflows/core/: __init__.py  config.py  errors.py  text.py  token_budget.py  types.py
hermes_dynamic_workflows/engine/: __init__.py  api.py  approval_hook.py  cache.py  config.py  context.py  errors.py  manager.py  runtime.py  sandbox.py  structured.py  structured_tool.py  token_budget.py  types.py
hermes_dynamic_workflows/host/: __init__.py  gateway.py  session.py
hermes_dynamic_workflows/plugin/: __init__.py  registrar.py  schema.py  structured_output.py  task_stop.py  tool.py  tool_errors.py  workflow.py
hermes_dynamic_workflows/run/: __init__.py  manager.py  transcripts.py
hermes_dynamic_workflows/storage/: __init__.py  store.py
hermes_dynamic_workflows/tui/: __init__.py  app.py  model.py  (+1 more)
tests/: test_approval_hook.py  test_child_agent.py  test_commands.py  test_control.py  test_display.py  test_launch_approval.py  test_run_manager.py  test_runtime.py  test_sandbox.py  test_structured_output.py  test_structured_tool.py  test_token_budget.py  test_tool.py  test_tui.py
(+5 files in other folders)
