[project]
name = "hermes-dynamic-workflows"
version = "0.1.0"
description = "Claude-Code-style dynamic workflows for Hermes Agent"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4,<5",
    "windows-curses>=2.4; platform_system == 'Windows'",
]

[project.scripts]
hermes-workflows = "hermes_dynamic_workflows.tui.app:main"

[project.entry-points."hermes_agent.plugins"]
dynamic-workflows = "hermes_dynamic_workflows.entry"

[tool.setuptools.package-data]
hermes_dynamic_workflows = ["agents/*.md"]

[tool.unittest]
start-dir = "tests"
